[package]
name = "job-shop-ea"
version = "0.1.0"
edition = "2021"
authors = ["vilaureu"]
description = "Job-shop scheduling solver using an evolutionary algorithm."

[dependencies]
anyhow = "1.0"
ctrlc = { version = "3.2", features = ["termination"] }
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6.0"
rayon = "1.5"
structopt = { version = "0.3", default-features = false, features = ["color"] }
